--- a/app/src/main/res/layout/users_single_layout.xml
+++ b/app/src/main/res/layout/users_single_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -33,5 +34,17 @@
         android:layout_below="@id/user_single_name"
         android:layout_marginTop="50dp"
         android:text="상태메시지 적어주세요" />
+
+    <ImageView
+        android:id="@+id/user_single_online_icon"
+        android:layout_width="13dp"
+        android:layout_height="13dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignTop="@id/user_single_name"
+        android:layout_toEndOf="@id/user_single_name"
+        app:srcCompat="@mipmap/ic_green_dot"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
