--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -9,12 +9,18 @@
 
     <include
         android:id="@+id/chat_app_bar"
-        layout="@layout/app_bar_layout"
+        layout="@layout/app_bar_layout"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/messages_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/linearLayout"
+        android:layout_below="@id/chat_app_bar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:id="@+id/linearLayout"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
@@ -22,8 +28,8 @@
         android:orientation="horizontal"
         android:weightSum="10">
 
-        <ImageView
-            android:id="@+id/imageView"
+        <ImageButton
+            android:id="@+id/chat_app_btn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -32,21 +38,22 @@
             android:padding="10dp"
             app:srcCompat="@drawable/ic_action_add" />
 
-        <TextView
-            android:id="@+id/textView3"
+        <EditText
+            android:id="@+id/chat_message_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
-            android:paddingBottom="16dp"
             android:layout_weight="8"
             android:alpha="0.5"
             android:background="@color/white"
-            android:text="TextView" />
+            android:hint="내용 적어주세요"
+            android:inputType="text"
+            android:paddingBottom="16dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="16dp" />
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <ImageButton
+            android:id="@+id/chat_send_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
