--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,12 +11,20 @@
         android:id="@+id/chat_app_bar"
         layout="@layout/app_bar_layout"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/messages_list"
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/linearLayout"
-        android:layout_below="@id/chat_app_bar"/>
+        android:layout_below="@id/chat_app_bar"
+        android:layout_above="@id/linearLayout"
+        android:id="@+id/message_swipe_layout">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/messages_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/linearLayout"
+            android:layout_below="@id/chat_app_bar"></android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
