--- a/app/src/main/res/layout/message_single_layout.xml
+++ b/app/src/main/res/layout/message_single_layout.xml
@@ -1,28 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:padding="15dp"
-    android:id="@+id/message_single_layout">
+    android:padding="10dp"
+    android:id="@+id/message_single_layout"
+    android:weightSum="10">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:src="@drawable/ic_action_name"
-        android:id="@+id/message_profile_layout"/>
+        android:id="@+id/message_profile_layout"
+        android:layout_weight="0"/>
+
 
     <TextView
         android:id="@+id/message_text_layout"
+        android:layout_marginLeft="10dp"
+        android:padding="0dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textColor="@color/white"
-        android:layout_alignBottom="@+id/message_profile_layout"
+        android:layout_below="@+id/name_text_layout"
         android:layout_toEndOf="@+id/message_profile_layout"
+        android:textColor="#444444"
+        android:text="내용"
+        android:textSize="14sp" />
+    <TextView
+        android:id="@+id/name_text_layout"
+        android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/message_profile_layout"
+        android:text="이름"
+        android:textColor="@android:color/black"
+        android:textSize="15sp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00:00"
+        android:id="@+id/time_text_layout"
+        android:layout_marginLeft="10dp"
+        android:layout_toEndOf="@id/name_text_layout"
+        android:layout_marginTop="2dp"
+        android:textSize="12sp"/>
 
-        android:layout_marginStart="10dp"
-        android:padding="14dp"
-        android:textSize="10dp"
-        android:background="@drawable/message_text_background"
-        android:layout_marginBottom="10dp"/>
 
 </RelativeLayout>
